fix: Avoid excessive layout shifts

--- a/style.css
+++ b/style.css
@@ -105,7 +105,12 @@ input[type=checkbox] {
 	width: 100%;
 	margin: auto;
 	flex: 1;
-	z-index: 2
+	z-index: 2;
+	display: block;
+}
+
+#bookmarks {
+	display: none;
 }
 
 .flex-main-container-vertical {
